--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             <a href="#">Contact</a>
         </div>
         <div class="auth-buttons">
-            <a href="#" class="btn-signin">Sign In</a>
+            <a href="{{ url_for('signin') }}" class="btn-signin">Sign In</a>
             <a href="#" class="btn-register">Register</a>
         </div>
     </nav>
